[package]
name = "sshbrute-rs"
version = "0.1.0"
authors = ["rupansh <rupanshsekar@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
num_cpus = "1.0"
ssh2 = "0.8.2"
threadpool = "1.8.1"